Sprint Bug - Responsive Web - IE11 - My Appointments - When there is a lot on the screen, the content overlaps with the Footer

--- a/web/src/style/_webshared.scss
+++ b/web/src/style/_webshared.scss
@@ -46,12 +46,12 @@
 
 .header-container-desktop, .footer-container-desktop {
   order: 0;
-  flex: 0 1 auto;
+  flex: 0 0 auto;
   align-self: stretch;
 }
 
 .main-container-desktop {
   order: 0;
-  flex: 1 1 auto;
+  flex: 1 0 auto;
   align-self: stretch;
 }
